<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="true_button">TRUE</string>
    <string name="false_button">FALSE</string>
    <string name="last_button">Last One</string>
    <string name="next_button">Next One</string>
    <string name="cheat_button">CHEAT</string>
    <string name="show_answer_button">SHOW ANSWER</string>
    <string name="correct_ans">Correct !</string>
    <string name="incorrect_ans">Incorrect !</string>
    <string name="answer_text">Answer Here</string>
    <string name="warning_text">Are you sure to watch the answer ?</string>
    <string name="judgement_tost">Cheating is wrong. </string>
</resources>
